--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body>
     <div id="root"></div>
     <div id="modals"></div>
+    <div id="norma"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
