--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="modals"></div>
-    <div id="norma"></div>
+    <!-- <div id="modals"></div>
+    <div id="norma"></div> -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
